--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
       <a href="#quem-somos" class="text-white font-sans font-bold hover:text-brand-blue transition">Ações</a>
       <a href="#atuacao" class="text-white font-sans font-bold hover:text-brand-blue transition">Projetos</a>
       <a href="#parceiros" class="text-white font-sans font-bold hover:text-brand-blue transition">Crônicas</a>
-      <a href="#parceiros" class="text-white font-sans font-bold hover:text-brand-blue transition">Volutários</a>
+      <a href="#parceiros" class="text-white font-sans font-bold hover:text-brand-blue transition">Voluntários</a>
       <a [routerLink]="['/voluntary']" class="bg-orange-600 hover:bg-orange-800 text-white px-6 py-2 rounded-full font-bold transition shadow-lg transform hover:scale-105">
         Seja Voluntário
       </a>
