--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,19 @@
-<header class="fixed w-full z-50 transition-all duration-300" [class.bg-brand-orange]="true">
-  <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+<header
+  class="fixed z-50 top-4 left-0 right-0 mx-auto w-[95%] max-w-7xl rounded-2xl shadow-2xl transition-all duration-300 overflow-hidden"
+  [class.bg-brand-orange]="true">
+
+  <div class="px-6 py-4 flex justify-between items-center">
     <a href="#">
       <img src="assets/novaLogo.svg" alt="Logo Rede PerifAtiva" class="h-12 w-auto">
     </a>
 
     <nav class="hidden md:flex space-x-8 items-center">
+      <a href="#quem-somos" class="text-white font-sans font-bold hover:text-brand-blue transition">Quem Somos</a>
       <a href="#quem-somos" class="text-white font-sans font-bold hover:text-brand-blue transition">Ações</a>
-      <a href="#atuacao" class="text-white font-sans font-bold hover:text-brand-blue transition">Projetos</a>
       <a href="#parceiros" class="text-white font-sans font-bold hover:text-brand-blue transition">Crônicas</a>
       <a href="#parceiros" class="text-white font-sans font-bold hover:text-brand-blue transition">Voluntários</a>
-      <a [routerLink]="['/voluntary']" class="bg-orange-600 hover:bg-orange-800 text-white px-6 py-2 rounded-full font-bold transition shadow-lg transform hover:scale-105">
+
+      <a [routerLink]="['/voluntary']" class="bg-white text-brand-orange hover:bg-gray-100 px-6 py-2 rounded-xl font-bold transition shadow-md transform hover:scale-105">
         Seja Voluntário
       </a>
     </nav>
