--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -91,10 +91,37 @@
         </p>
       </div>
 
-      <a href="#voluntario" class="inline-block mt-6 border-b-2 border-brand-red text-brand-red font-bold hover:text-red-700 transition">
+      <a [routerLink]="['/quem-somos']" class="inline-block mt-6 border-b-2 border-brand-red text-brand-red font-bold hover:text-red-700 transition">
         Saiba mais sobre nós →
       </a>
     </div>
+  </div>
+</section>
+
+<section class="py-20 bg-gray-50">
+  <div class="container mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
+
+
+    <div class="order-2 md:order-2 relative">
+      <div class="absolute -top-4 -left-4 w-24 h-24 bg-brand-green rounded-full opacity-20"></div>
+      <div class="absolute -bottom-4 -right-4 w-32 h-32 bg-brand-orange rounded-full opacity-20"></div>
+      <div class="w-full h-96 bg-gray-200 rounded-2xl overflow-hidden shadow-xl border-b-8 border-brand-green">
+        <img src="assets/PerifAtiva/equipe.jpg" alt="Equipe Rede PerifAtiva" class="w-full h-full object-cover transform hover:scale-105 transition duration-500">
+      </div>
+    </div>
+
+    <div class="order-1 md:order-1">
+      <img src="assets/PerifAtiva/logos/LogoPretaBranco.svg" alt="Logo Rede PerifAtiva" class="h-10 pb-4 w-auto">
+      <h2 class="font-display text-3xl text-brand-dark mb-6">Não prevemos o amanhã, nós <span class="text-brand-blue">potencializamos o hoje</span> transformando vivências do Curió em impacto global.</h2>
+
+      <div class="prose text-gray-600 font-sans leading-relaxed">
+        <p class="mb-4">
+          Queremos centralizar o eixo da luta comunitária e sociais, pois esse é o eixo principal, é ela quem alavanca toda a sociedade a pensar, buscar e conquistar aquilo que a ela pertence.
+
+        </p>
+      </div>
+    </div>
+
   </div>
 </section>
 
@@ -147,8 +174,8 @@
 <section class="py-24 bg-brand-blue relative overflow-hidden">
   <div class="absolute inset-0 bg-[url('https://www.transparenttextures.com/patterns/cubes.png')] opacity-10"></div>
   <div class="container mx-auto px-6 text-center relative z-10">
-    <blockquote class="font-display text-3xl md:text-5xl text-white leading-snug max-w-4xl mx-auto">
-      "Se for preciso, mil vidas eu daria pelo RPA e mil vidas eu dou pela periferia"
+    <blockquote class="font-display text-2xl md:text-2xl text-white leading-snug max-w-4xl mx-auto">
+      "É PRECISO A UNIÃO DOS EQUIPAMENTOS PÚBLICOS, EMPRESAS E ORGANIZAÇÕES SOCIAIS PARA CONSTRUIR UMA SOCIEDADE MAIS JUSTA, MAIS SUSTENTÁVEL E INCLUSIVA "
     </blockquote>
     <div class="mt-8 w-24 h-1 bg-white mx-auto rounded-full"></div>
   </div>
